fix: Allowing the tags to wrap over multiple lines.
The Flexbox default is no wrapping so the tags were going off the edge of the screen. This fixes that.

--- a/src/components/summarycontentbanner/summarycontentbanner.module.css
+++ b/src/components/summarycontentbanner/summarycontentbanner.module.css
@@ -1,6 +1,7 @@
 .tagsContainer {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content:center;
   margin: auto;
 }
